[package]
name = "dinotreedemomenu"
version = "0.1.0"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
edition = "2018"

[dependencies]
dists={git="https://github.com/tiby312/dinodists.git"}
ordered-float = "0.5.0"
#compt = "1.2.4"
#compt={path="../compt"}
axgeom = "1.0.2"

dinotree = {path="../dinotree"}
num = "0.2.0"
dinotreedemo={path="../dinotreedemo"}
ascii_num={path="../ascii_num"}
#dinotree_alg="0.1.1"
#dinotree_alg={path="../dinotree_alg"}
#dinotree_measure={git="https://github.com/tiby312/dinotree_measure"}
#dinotree_measure={path="../dinotree_measure"}